--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node",
+  "name": "mysql",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/irenewilliams77/node#readme",
   "dependencies": {
-    "mysql": "^2.18.1"
-  }
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "node": "^14.7.0"
+  },
+  "devDependencies": {}
 }
